// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEntries rendering renders expected elements 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <ul
    className="ListEntries ListEntries--grid TestClass"
    id="test"
    onClick={[Function]}
  >
    <Layer
      as="li"
      className="ListEntries__item"
      data-testid="list-item"
    >
      <div
        className="ListEntries__name"
      >
        test
      </div>
      <button
        aria-label="Remove test"
        className="ListEntries__icon"
        data-index={0}
        data-testid="remove-item"
        type="button"
      >
        <Close />
      </button>
    </Layer>
  </ul>
</React.Fragment>
`;

exports[`ListEntries rendering renders expected elements when column is set 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <ul
    className="ListEntries ListEntries--column"
    id="test"
    onClick={[Function]}
  >
    <Layer
      as="li"
      className="ListEntries__item"
      data-testid="list-item"
    >
      <div
        className="ListEntries__name"
      >
        test
      </div>
      <button
        aria-label="Remove test"
        className="ListEntries__icon"
        data-index={0}
        data-testid="remove-item"
        type="button"
      >
        <Close />
      </button>
    </Layer>
  </ul>
</React.Fragment>
`;

exports[`ListEntries rendering renders expected elements when highlightKey is set 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <ul
    className="ListEntries ListEntries--grid"
    id="test"
    onClick={[Function]}
  >
    <Layer
      as="li"
      className="ListEntries__item ListEntries__item--highlight"
      data-testid="list-item"
    >
      <div
        className="ListEntries__name"
      >
        test
      </div>
      <button
        aria-label="Remove test"
        className="ListEntries__icon"
        data-index={0}
        data-testid="remove-item"
        type="button"
      >
        <Close />
      </button>
    </Layer>
  </ul>
</React.Fragment>
`;

exports[`ListEntries rendering renders expected elements when renderItem is not set 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <ul
    className="ListEntries ListEntries--grid"
    id="test"
    onClick={[Function]}
  >
    <Layer
      as="li"
      className="ListEntries__item"
      data-testid="list-item"
    >
      <div
        className="ListEntries__name"
      >
        test
      </div>
      <button
        aria-label="Remove test"
        className="ListEntries__icon"
        data-index={0}
        data-testid="remove-item"
        type="button"
      >
        <Close />
      </button>
    </Layer>
  </ul>
</React.Fragment>
`;

exports[`ListEntries rendering renders expected elements when the item has className 1`] = `
<React.Fragment>
  <div
    aria-live="polite"
    className="sr-only"
  />
  <ul
    className="ListEntries ListEntries--grid"
    id="test"
    onClick={[Function]}
  >
    <Layer
      as="li"
      className="ListEntries__item"
      data-testid="list-item"
    >
      <div
        className="TestClass ListEntries__name"
      >
        test
      </div>
      <button
        aria-label="Remove test"
        className="ListEntries__icon"
        data-index={0}
        data-testid="remove-item"
        type="button"
      >
        <Close />
      </button>
    </Layer>
  </ul>
</React.Fragment>
`;
